--- a/package.json
+++ b/package.json
@@ -20,14 +20,24 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.1",
+    "angular5-data-table": "^1.0.3",
+    "angularfire2": "^4.0.0-rc.1",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
+    "firebase": "^3.9.0",
+    "firebase-tools": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.2.0",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.4",
-    "@angular/compiler-cli": "^6.1.0",
+    "@angular/cli": "^6.2.6",
+    "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
