--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,9 @@
       "es2017",
       "dom"
     ]
-  }
+  },
+"include": [
+  "src/**/*",
+  "node_modules/angular-bootstrap-md/index.ts"
+  ]
 }
